@@ -1,8 +1,9 @@
-2017-03-18
+2017-03-22
 
         * Version 1.3.0 released
         =========================
 
+        Implement lazy loading of energy dispersion in GCTAEdisp2D (#1940)
         Add GCTARoi::contains method
         Do no longer interpret a CTA calibration database as file path (#1969)
         Add GCTAResponseIrf::rspname() method
